@@ -6,30 +6,38 @@ contains the full copyright notices and license terms. -->
     <field name="party_nif"/>
     <label name="party_name"/>
     <field name="party_name"/>
-    <label name="party_country"/>
-    <field name="party_country"/>
     <label name="party_identifier_type"/>
     <field name="party_identifier_type"/>
     <label name="party_identifier"/>
     <field name="party_identifier"/>
-    <label name="book_key"/>
-    <field name="book_key"/>
-    <label name="operation_key"/>
-    <field name="operation_key"/>
+    <label name="party_country"/>
+    <field name="party_country"/>
+    <newline/>
+    <label name="invoice"/>
+    <field name="invoice"/>
+    <label name="invoice_number"/>
+    <field name="invoice_number"/>
     <label name="issue_date"/>
     <field name="issue_date"/>
     <label name="operation_date"/>
     <field name="operation_date"/>
+    <label name="book_key"/>
+    <field name="book_key"/>
+    <label name="operation_key"/>
+    <field name="operation_key"/>
     <label name="tax_rate"/>
     <field name="tax_rate"/>
-    <label name="base"/>
-    <field name="base"/>
     <label name="tax"/>
     <field name="tax"/>
+    <label name="equivalence_tax_rate"/>
+    <field name="equivalence_tax_rate"/>
+    <label name="equivalence_tax"/>
+    <field name="equivalence_tax"/>
+    <label name="base"/>
+    <field name="base"/>
     <label name="total"/>
     <field name="total"/>
-    <label name="invoice_number"/>
-    <field name="invoice_number"/>
+    <newline/>
     <label name="issued"/>
     <field name="issued"/>
     <label name="received"/>
